@@ -18,8 +18,6 @@
 #' @inheritParams geom_point
 #' @param geom,stat Use to override the default connection between
 #'   \code{geom_smooth} and \code{stat_smooth}.
-#' @param ... Additional arguments passed on to the underlying statistical
-#'  model.
 #' @seealso See individual modelling functions for more details:
 #'   \code{\link{lm}} for linear smooths,
 #'   \code{\link{glm}} for generalised linear smooths,
@@ -60,17 +58,21 @@
 #' \dontrun{
 #' # To fit a logistic regression, you need to coerce the values to
 #' # a numeric vector lying between 0 and 1.
+#' binomial_smooth <- function(...) {
+#'   geom_smooth(method = "glm", method.args = list(family = "binomial"), ...)
+#' }
+#'
 #' ggplot(rpart::kyphosis, aes(Age, Kyphosis)) +
 #'   geom_jitter(height = 0.05) +
-#'   stat_smooth(method = "glm", family = "binomial")
+#'   binomial_smooth()
 #'
 #' ggplot(rpart::kyphosis, aes(Age, as.numeric(Kyphosis) - 1)) +
 #'   geom_jitter(height = 0.05) +
-#'   stat_smooth(method = "glm", family = "binomial")
+#'   binomial_smooth()
 #'
 #' ggplot(rpart::kyphosis, aes(Age, as.numeric(Kyphosis) - 1)) +
 #'   geom_jitter(height = 0.05) +
-#'   stat_smooth(method = "glm", family = "binomial", formula = y ~ splines::ns(x, 2))
+#'   binomial_smooth(formula = y ~ splines::ns(x, 2))
 #'
 #' # But in this case, it's probably better to fit the model yourself
 #' # so you can exercise more control and see whether or not it's a good model
