@@ -25,7 +25,7 @@
 #' # Use fitdistr from MASS to estimate distribution params
 #' params <- as.list(MASS::fitdistr(df$y, "t")$estimate)
 #' ggplot(df, aes(sample = y)) +
-#'   stat_qq(distribution = qt, dparams = params)
+#'   stat_qq(distribution = qt, dparams = params["df"])
 #'
 #' # Using to explore the distribution of a variable
 #' ggplot(mtcars) +
@@ -82,7 +82,7 @@ StatQq <- ggproto("StatQq", Stat,
       stopifnot(length(quantiles) == n)
     }
 
-    theoretical <- safe.call(distribution, c(list(p = quantiles), dparams))
+    theoretical <- do.call(distribution, c(list(p = quote(quantiles)), dparams))
 
     data.frame(sample, theoretical)
   }
