@@ -11,8 +11,8 @@ geom_smooth(mapping = NULL, data = NULL, stat = "smooth",
 
 stat_smooth(mapping = NULL, data = NULL, geom = "smooth",
   position = "identity", method = "auto", formula = y ~ x, se = TRUE,
-  n = 80, fullrange = FALSE, level = 0.95, na.rm = FALSE,
-  show.legend = NA, inherit.aes = TRUE, ...)
+  n = 80, fullrange = FALSE, level = 0.95, method.args = list(),
+  na.rm = FALSE, show.legend = NA, inherit.aes = TRUE, ...)
 }
 \arguments{
 \item{mapping}{The aesthetic mapping, usually constructed with
@@ -45,8 +45,16 @@ rather than combining with them. This is most useful for helper functions
 that define both data and aesthetics and shouldn't inherit behaviour from
 the default plot specification, e.g. \code{\link{borders}}.}
 
-\item{...}{Additional arguments passed on to the underlying statistical
-model.}
+\item{...}{other arguments passed on to \code{\link{layer}}. There are
+  three types of arguments you can use here:
+
+  \itemize{
+  \item Aesthetics: to set an aesthetic to a fixed value, like
+     \code{color = "red"} or \code{size = 3}.
+  \item Other arguments to the layer, for example you override the
+    default \code{stat} associated with the layer.
+  \item Other arguments passed on to the stat.
+  }}
 
 \item{geom,stat}{Use to override the default connection between
 \code{geom_smooth} and \code{stat_smooth}.}
@@ -57,6 +65,9 @@ model.}
 the data}
 
 \item{level}{level of confidence interval to use (0.95 by default)}
+
+\item{method.args}{List of additional arguments passed on to the modelling
+function defined by \code{method}.}
 
 \item{na.rm}{If \code{FALSE} (the default), removes missing values with
 a warning.  If \code{TRUE} silently removes missing values.}
@@ -124,17 +135,21 @@ ggplot(mpg, aes(displ, hwy)) +
 \dontrun{
 # To fit a logistic regression, you need to coerce the values to
 # a numeric vector lying between 0 and 1.
+binomial_smooth <- function(...) {
+  geom_smooth(method = "glm", method.args = list(family = "binomial"), ...)
+}
+
 ggplot(rpart::kyphosis, aes(Age, Kyphosis)) +
   geom_jitter(height = 0.05) +
-  stat_smooth(method = "glm", family = "binomial")
+  binomial_smooth()
 
 ggplot(rpart::kyphosis, aes(Age, as.numeric(Kyphosis) - 1)) +
   geom_jitter(height = 0.05) +
-  stat_smooth(method = "glm", family = "binomial")
+  binomial_smooth()
 
 ggplot(rpart::kyphosis, aes(Age, as.numeric(Kyphosis) - 1)) +
   geom_jitter(height = 0.05) +
-  stat_smooth(method = "glm", family = "binomial", formula = y ~ splines::ns(x, 2))
+  binomial_smooth(formula = y ~ splines::ns(x, 2))
 
 # But in this case, it's probably better to fit the model yourself
 # so you can exercise more control and see whether or not it's a good model
